--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  
 </head>
 
 <body>
@@ -10,3 +11,9 @@
 </body>
 
 </html>
+
+  reasons to love shrek
+  1. he's beautiful
+  2. he's friendly
+  3. he doesn't hurt anyone
+  
