--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 
 </head>
+<head>
+  <style>
+    Body{
+      background-color: rgb(131, 204, 194);}
+       </style>      
+</head>
 
 <body>
 <h1> welcome to my website about shrek <3<h1>
@@ -14,7 +20,7 @@
 
  
   
-  
+
   reasons to love shrek
   1. he's beautiful
   2. he's friendly
