--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 <h1> welcome to my website about shrek <3<h1>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-lHImMmnLqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pxw-5qfJ1dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
+
+ <p> reasons to love shrek
+  1. he's beautiful<br>
+  2. he's friendly<br>
+   3. he doesn't hurt anyone</p>
+  
+
+  
+ </body>
 
 </html>
 
  
-  
-
-  reasons to love shrek
-  1. he's beautiful
-  2. he's friendly
-  3. he doesn't hurt anyone
   
