--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-lHImMmnLqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pxw-5qfJ1dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
- <p> reasons to love shrek
+ <p> reasons to love shrek<br>
   1. he's beautiful<br>
   2. he's friendly<br>
    3. he doesn't hurt anyone</p>
